cmake_minimum_required(VERSION 3.10.2)
project("OpenGl")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lX11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lXext")
find_package(OpenGL REQUIRED)
find_package(glfw3 3.3 REQUIRED)
find_package(X11 REQUIRED)
include_directories("./include")
link_directories("${PROJECT_DIR}/lib")
add_executable(${PROJECT_NAME} "./src/main.cpp")
target_link_libraries(${PROJECT_NAME} OpenGL::GL)
target_link_libraries(${PROJECT_NAME} glfw3)
target_link_libraries(${PROJECT_NAME} X11 ${CMAKE_DL_LIBS})